--- a/index.html
+++ b/index.html
@@ -456,6 +456,12 @@ JotForm.paymentExtrasOnTheFly([null,null,null,null,null,null,null,null,null,null
   /*PREFERENCES STYLE*//*PREFERENCES STYLE*/
     .form-all {
       font-family: Inter, sans-serif;
+.bottomright {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+  font-size: 18px;
+}
     }
   
     .form-label.form-label-auto {
@@ -799,7 +805,9 @@ JotForm.paymentExtrasOnTheFly([null,null,null,null,null,null,null,null,null,null
       </li>
       <li class="form-line" data-type="control_button" id="id_75">
         <div id="cid_75" class="form-input-wide" data-layout="full">
-         <p><span style="font-size: 24pt;"><strong><a href="https://cosmofeed.com/vp/6459e488d2a9aa0020d8eebc" target="_blank" rel="nofollow">Pay Now</a></strong></span></p>
+<div form-submit-button-blue-400 jf-form-buttons style="position: absolute; bottom: -80px; right: 0; width: 100px; text-align:right;"><p><span style="font-size: 14pt;"><strong><a href="https://cosmofeed.com/vp/6459e488d2a9aa0020d8eebc" target="_blank" rel="nofollow">Pay Now</a></strong></span></p>
+</div>
+         
         </div>
       </li>
       <li style="display:none">Should be Empty: <input type="text" name="website" value="" /></li>
